terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {
   cidr_block           = var.vpc_cidr
   enable_dns_support   = true
   enable_dns_hostnames = true

   tags = {
    Name = "${var.environment}-vpc"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.environment}-igw"
  }
}
resource "aws_subnet" "public" {
    count = 2
    vpc_id = aws_vpc.this.id
    cidr_block = var.public_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true
    tags = {
    Name = "${var.environment}-public-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"
  }
}
resource "aws_subnet" "private" {
    count = 2
    vpc_id = aws_vpc.this.id
    cidr_block = var.private_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    tags = {
    Name = "${var.environment}-private-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"
  }
}


resource "aws_subnet" "database" {
    count = 2
    vpc_id = aws_vpc.this.id
    cidr_block = var.database_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    tags = {
    Name = "${var.environment}-databse-${count.index + 1}"
  }
}


resource "aws_route_table" "public"{
    vpc_id = aws_vpc.this.id
    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id
    }
    tags = {
    Name = "${var.environment}-public-rt"
  }
    }


resource "aws_route_table_association" "public"{
    count = 2
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat"{
    count = var.enable_nat_gateway? 1 : 0
    domain = "vpc"
    tags = {
    Name = "${var.environment}-nat-eip"
  }
}
resource "aws_nat_gateway" "this"{
    count = var.enable_nat_gateway? 1 : 0
    allocation_id = aws_eip.nat[0].id
    subnet_id     = aws_subnet.public[0].id
    tags = {
    Name = "${var.environment}-nat"
  }
    depends_on = [
        aws_internet_gateway.this
    ]
}
resource "aws_route_table" "private"{
    count = 2
    vpc_id = aws_vpc.this.id
    dynamic "route"{
        for_each = var.enable_nat_gateway ? [1] : []
        content {
            cidr_block = "0.0.0.0/0"
            nat_gateway_id = aws_nat_gateway.this[0].id
        }
    }
     tags = {
    Name = "${var.environment}-private-rt-${count.index + 1}"
  }
}
resource "aws_route_table_association" "private"{
    count = 2
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private[count.index].id
}
resource "aws_route_table" "database" {
  count = 2

  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.environment}-database-rt-${count.index + 1}"
  }
}
resource "aws_route_table_association" "database" {
  count = 2

  subnet_id      = aws_subnet.database[count.index].id
  route_table_id = aws_route_table.database[count.index].id
}
